add modal dialog

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -6,3 +6,5 @@
 <div class="game-container">
   <div *ngFor="let i of date" [ngClass]="i.status" (click)='clickPlayer(i.status , i)'></div>
 </div>
+
+<button (click)="OpenModal()">CLick me MotherFucker</button>
