--- a/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.css
+++ b/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.css
@@ -2,3 +2,29 @@
   display: flex;
   flex-direction: column;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  display: none;
+}
+
+input[type="number"] {
+  background-color: #eee;
+  vertical-align: top;
+  outline: none;
+  padding: 0;
+  margin: 0 0 20px 0;
+  height: 40px;
+  line-height: 40px;
+  text-indent: 10px;
+  display: inline-block;
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #ddd;
+  font-size: 14px;
+  border-radius: 3px;
+}
+
+input[type="number"]:focus {
+  outline: 2px solid blue;
+}
