--- a/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
+++ b/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
@@ -15,7 +15,7 @@
       [mat-dialog-close]="dataDialog"
       [disabled]="formSettings.invalid"
     >
-      Начать играть
+      Почати
     </button>
   </form>
 </div>
