--- a/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
+++ b/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
@@ -1,6 +1,6 @@
 <div class="modal-welcome">
-  <h1>Добро пожаловать</h1>
-  <p>Введите задержку в милисекундах и да начнётся игра</p>
+  <h1>Ласкаво просимо</h1>
+  <p>Введіть затримку в мілісекундах</p>
   <form [formGroup]="formSettings" (ngSubmit)="startGame()">
     <input
       type="number"
