--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -1,7 +1,7 @@
 <div class="game-container">
   <div>
     <div class="title-score">
-      <h1>Score: computer {{scoreComputer}} / player {{scorePlayer}}</h1>
+      <h1>Бали: комп'ютер {{scoreComputer}} / гравець {{scorePlayer}}</h1>
     </div>
   </div>
   <div class="game-elements">
