--- a/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
+++ b/src/app/modalDialogs/welcome-game-modal/welcome-game-modal.component.html
@@ -10,7 +10,7 @@
       formControlName="delay"
     />
     <button
-      class="btn"
+      app-button
       type="submit"
       [mat-dialog-close]="dataDialog"
       [disabled]="formSettings.invalid"
