--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -4,7 +4,7 @@
       <h1>Бали: комп'ютер {{scoreComputer}} / гравець {{scorePlayer}}</h1>
     </div>
   </div>
-  <div class="game-elements" #board>
+  <div class="game-elements">
     <div *ngFor="let element of cellData" [ngClass]="element.status" (click)='clickPlayer(element)'></div>
   </div>
 </div>
