--- a/src/app/components/game/game.component.html
+++ b/src/app/components/game/game.component.html
@@ -11,9 +11,9 @@
       ></div>
     </div>
     <div class="settings-game">
-      <app-welcome-game-modal
+      <app-input-delay
         (delayUser)="startGame($event)"
-      ></app-welcome-game-modal>
+      ></app-input-delay>
     </div>
   </div>
 </div>
